[metadata]
name = cancel_scope
version = attr: cancel_scope.__version__
author = Connor Sherwood Maynes
author_email = connormaynes@gmail.com
description = Threadsafe cancellation scope context manager for sync/async code
classifiers =
    Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6,<4
install_requires =
